@@ -587,6 +587,9 @@ call(F, A1, A2, A3, A4, A5, A6, A7, A8) :-
 
 % '$lgt_rewrite_and_copy_pl_directive'(@callable, -callable)
 
+'$lgt_rewrite_and_copy_pl_directive'(block(Heads), block(THeads)) :-
+	'$lgt_tr_predicate_heads'(Heads, THeads).
+
 '$lgt_rewrite_and_copy_pl_directive'(load_foreign_resource(Resource), initialization(load_foreign_resource(Resource))) :-
 	load_foreign_resource(Resource).
 
