@@ -553,6 +553,9 @@ forall(Generate, Test) :-
 
 % '$lgt_rewrite_and_copy_pl_directive'(@callable, -callable)
 
+'$lgt_rewrite_and_copy_pl_directive'(block(Heads), block(THeads)) :-
+	'$lgt_tr_predicate_heads'(Heads, THeads).
+
 '$lgt_rewrite_and_copy_pl_directive'(load_foreign_resource(Resource), initialization(load_foreign_resource(Resource))) :-
 	load_foreign_resource(Resource).
 
