@@ -16,21 +16,21 @@ On POSIX systems, the Logtalk installers make the following integration
 scripts available from the command-line (you may need to adjust your 
 system path):
 
-* B-Prolog (version 7.1 or later):         bplgt
-* Ciao (version 1.10):                     ciaolgt    (first run must use sudo)
-* CxProlog (version 0.97.1 or later):      cxlgt
-* ECLiPSe (versions 5.10, 6.0):            eclipselgt
-* GNU Prolog (version 1.3.1 or later):     gplgt
-* K-Prolog (versions 5.1.5, 6.0.4):        plclgt
-* Qu-Prolog (version 8.9 or later):        qplgt
-* Quintus Prolog (version 3.5):            quintuslgt (requires patching Logtalk)
-* SICStus Prolog (versions 3.12.x, 4.0.x): sicstuslgt
-* SWI-Prolog (version 5.6.44 or later):    swilgt
-* XSB (version 3.2 or later):              xsblgt     (first run must use sudo)
-* XSB 64 bits (version 3.2 or later):      xsb64lgt   (first run must use sudo)
-* XSB MT (version 3.2 or later):           xsbmtlgt   (first run must use sudo)
-* XSB MT 64 bits (version 3.2 or later):   xsbmt64lgt (first run must use sudo)
-* YAP (version 5.1.3 or later):            yaplgt
+* B-Prolog (version 7.1 or later):       bplgt
+* Ciao (version 1.10):                   ciaolgt    (first run must use sudo)
+* CxProlog (version 0.97.1 or later):    cxlgt
+* ECLiPSe (versions 5.10, 6.0):          eclipselgt
+* GNU Prolog (version 1.3.1 or later):   gplgt
+* K-Prolog (versions 5.1.5, 6.0.4):      plclgt
+* Qu-Prolog (version 8.9 or later):      qplgt
+* Quintus Prolog (version 3.5):          quintuslgt (requires patching Logtalk)
+* SICStus Prolog (versions 3.12.x, 4.x): sicstuslgt
+* SWI-Prolog (version 5.6.44 or later):  swilgt
+* XSB (version 3.2 or later):            xsblgt     (first run must use sudo)
+* XSB 64 bits (version 3.2 or later):    xsb64lgt   (first run must use sudo)
+* XSB MT (version 3.2 or later):         xsbmtlgt   (first run must use sudo)
+* XSB MT 64 bits (version 3.2 or later): xsbmt64lgt (first run must use sudo)
+* YAP (version 5.1.3 or later):          yaplgt
 
 Integration with Quintus Prolog requires manual patches that render
 Logtalk incompatible with all the other compilers.
