@@ -84,21 +84,21 @@ echo
 echo "The following integration scripts are installed for running Logtalk"
 echo "with selected back-end Prolog compilers:"
 echo
-echo "* B-Prolog (version 7.1 or later):         bplgt"
-echo "* Ciao (version 1.10):                     ciaolgt    (first run must use sudo)"
-echo "* CxProlog (version 0.97.4 or later):      cxlgt"
-echo "* ECLiPSe (versions 5.10, 6.0):            eclipselgt"
-echo "* GNU Prolog (version 1.3.1 or later):     gplgt"
-echo "* K-Prolog (versions 5.1.5, 6.0.4):        plclgt"
-echo "* Qu-Prolog (version 8.10 or later):       qplgt"
-echo "* Quintus Prolog (version 3.5):            quintuslgt  (requires patching Logtalk)"
-echo "* SICStus Prolog (versions 3.12.x, 4.0.x): sicstuslgt"
-echo "* SWI-Prolog (version 5.6.44 or later):    swilgt"
-echo "* XSB (version 3.2 or later):              xsblgt     (first run must use sudo)"
-echo "* XSB 64 bits (version 3.2 or later):      xsb64lgt   (first run must use sudo)"
-echo "* XSB MT (version 3.2 or later):           xsbmtlgt   (first run must use sudo)"
-echo "* XSB MT 64 bits (version 3.2 or later):   xsbmt64lgt (first run must use sudo)"
-echo "* YAP (version 5.1.3 or later):            yaplgt"
+echo "* B-Prolog (version 7.1 or later):       bplgt"
+echo "* Ciao (version 1.10):                   ciaolgt    (first run must use sudo)"
+echo "* CxProlog (version 0.97.4 or later):    cxlgt"
+echo "* ECLiPSe (versions 5.10, 6.0):          eclipselgt"
+echo "* GNU Prolog (version 1.3.1 or later):   gplgt"
+echo "* K-Prolog (versions 5.1.5, 6.0.4):      plclgt"
+echo "* Qu-Prolog (version 8.10 or later):     qplgt"
+echo "* Quintus Prolog (version 3.5):          quintuslgt  (requires patching Logtalk)"
+echo "* SICStus Prolog (versions 3.12.x, 4.x): sicstuslgt"
+echo "* SWI-Prolog (version 5.6.44 or later):  swilgt"
+echo "* XSB (version 3.2 or later):            xsblgt     (first run must use sudo)"
+echo "* XSB 64 bits (version 3.2 or later):    xsb64lgt   (first run must use sudo)"
+echo "* XSB MT (version 3.2 or later):         xsbmtlgt   (first run must use sudo)"
+echo "* XSB MT 64 bits (version 3.2 or later): xsbmt64lgt (first run must use sudo)"
+echo "* YAP (version 5.1.3 or later):          yaplgt"
 echo
 echo "The Prolog integration scripts can be found on \"/usr/local/bin\"."
 echo "Make sure that the Prolog compilers are properly installed and available"
