@@ -55,21 +55,21 @@ post-activate {
 	ui_msg "* back-end Prolog compilers (which must be properly installed for running"
 	ui_msg "* the scripts!):"
 	ui_msg "*"
-	ui_msg "* B-Prolog (version 7.1 or later):         bplgt"
-	ui_msg "* Ciao (version 1.10):                     ciaolgt    (first run must use sudo)"
-	ui_msg "* CxProlog (version 0.97.4 or later):      cxlgt"
-	ui_msg "* ECLiPSe (versions 5.10, 6.0):            eclipselgt"
-	ui_msg "* GNU Prolog (version 1.3.1 or later):     gplgt"
-	ui_msg "* K-Prolog (versions 5.1.5, 6.0.4):        plclgt"
-	ui_msg "* Qu-Prolog (version 8.10 or later):        qplgt"
-	ui_msg "* Quintus Prolog (version 3.5):            quintuslgt (requires patching Logtalk)"
-	ui_msg "* SICStus Prolog (versions 3.12.x, 4.0.x): sicstuslgt"
-	ui_msg "* SWI-Prolog (version 5.6.44 or later):    swilgt"
-	ui_msg "* XSB (version 3.2 or later):              xsblgt     (first run must use sudo)"
-	ui_msg "* XSB 64 bits (version 3.2 or later):      xsb64lgt   (first run must use sudo)"
-	ui_msg "* XSB MT (version 3.2 or later):           xsbmtlgt   (first run must use sudo)"
-	ui_msg "* XSB MT 64 bits (version 3.2 or later):   xsbmt64lgt (first run must use sudo)"
-	ui_msg "* YAP (version 5.1.3 or later):            yaplgt"
+	ui_msg "* B-Prolog (version 7.1 or later):       bplgt"
+	ui_msg "* Ciao (version 1.10):                   ciaolgt    (first run must use sudo)"
+	ui_msg "* CxProlog (version 0.97.4 or later):    cxlgt"
+	ui_msg "* ECLiPSe (versions 5.10, 6.0):          eclipselgt"
+	ui_msg "* GNU Prolog (version 1.3.1 or later):   gplgt"
+	ui_msg "* K-Prolog (versions 5.1.5, 6.0.4):      plclgt"
+	ui_msg "* Qu-Prolog (version 8.10 or later):     qplgt"
+	ui_msg "* Quintus Prolog (version 3.5):          quintuslgt (requires patching Logtalk)"
+	ui_msg "* SICStus Prolog (versions 3.12.x, 4.x): sicstuslgt"
+	ui_msg "* SWI-Prolog (version 5.6.44 or later):  swilgt"
+	ui_msg "* XSB (version 3.2 or later):            xsblgt     (first run must use sudo)"
+	ui_msg "* XSB 64 bits (version 3.2 or later):    xsb64lgt   (first run must use sudo)"
+	ui_msg "* XSB MT (version 3.2 or later):         xsbmtlgt   (first run must use sudo)"
+	ui_msg "* XSB MT 64 bits (version 3.2 or later): xsbmt64lgt (first run must use sudo)"
+	ui_msg "* YAP (version 5.1.3 or later):          yaplgt"
 	ui_msg "*"
 	ui_msg "* Integration with Quintus Prolog requires manual patches that render"
 	ui_msg "* Logtalk incompatible with all the other compilers."
